@@ -874,6 +874,7 @@ FUNTAB R_FunTab[] = {
     {"registerNamespace", do_regNS, 0, 11, 2, {PP_FUNCALL, PREC_FN, 0}},
     {"unregisterNamespace", do_unregNS, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"getRegisteredNamespace", do_getRegNS, 0, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
+    {"isRegisteredNamespace", do_getRegNS, 1, 11, 1, {PP_FUNCALL, PREC_FN, 0}},
     {"getNamespaceRegistry", do_getNSRegistry, 0, 11, 0, {PP_FUNCALL, PREC_FN, 0}},
     {"importIntoEnv", do_importIntoEnv, 0, 11, 4, {PP_FUNCALL, PREC_FN, 0}},
     {"env.profile", do_envprofile, 0, 211, 1, {PP_FUNCALL, PREC_FN, 0}},
